src/objects/Deal_Registration__c.object
<CustomObject>
    <description>This object is created to display the Deal registration records integrated from MSI</description>
    <fields>
        <fullName>Accept_Reject_Date__c</fullName>
        <description>Deal Registration Accept/Reject Date for Approval</description>
        <label>Accept/Reject Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>Partner can mention Additional comments before submitting the deal</description>
        <label>Additional Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_opportunities_for_project__c</fullName>
        <description>Partner can mention the Additional opportunities for Project before submitting deal</description>
        <label>Additional opportunities for project?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status_Legacy__c</fullName>
        <description>Approval status for the Deal Registration</description>
        <label>Approval Status Legacy</label>
        <picklist>
            <picklistValues>
                <fullName>Approved - Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Approval status for the Deal Registration</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Submission_Date__c</fullName>
        <description>Deal Registration Submission Date for Approval</description>
        <label>Approval Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approve_Reject_Comments__c</fullName>
        <description>Deal Registration Approve/Reject Comments for approval</description>
        <label>Approve/Reject Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Book_Date_to_Distributor__c</fullName>
        <inlineHelpText>The date when Partner will send Purchase Order to the Distributor. Please note that this should be less than the Project Close Date by at least 4 weeks.</inlineHelpText>
        <label>Book Date to Distributor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <inlineHelpText>Kindly mention here if the Deal you are registering was generated from any specific event or campaign conducted by Zebra Technologies, E.i tradeshows, expos, etc.</inlineHelpText>
        <label>Campaign Source</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition_from_other_resellers__c</fullName>
        <label>Competition from other resellers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_products_model_and_price__c</fullName>
        <label>Competitive products, model and price</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <externalId>true</externalId>
        <label>Confirmation Number  Legacy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentApprover__c</fullName>
        <label>Current Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Approver__c</fullName>
        <description>First Level Approver for Deal Registartion</description>
        <label>Current Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DR_Activation_Date__c</fullName>
        <label>DR Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DR_ConfirmationNumber__c</fullName>
        <formula>IF(OR(ISPICKVAL(Approval_Status__c , &quot;Approved Final&quot;),ISPICKVAL(Approval_Status__c , &quot;Expired&quot;))  ,DR_Confirmation_Number__c ,Confirmation_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DR Confirmation Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Confirmation_Number__c</fullName>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Hidden AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DR_Expiration_Date__c</fullName>
        <label>DR Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DR_Expiration_Extension_Submission_Date__c</fullName>
        <label>DR Expiration Extension Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Amount__c</fullName>
        <description>Sum of the deal product amount for the deal registration</description>
        <label>Deal Amount</label>
        <summarizedField>DealProduct__c.Amount__c</summarizedField>
        <summaryForeignKey>DealProduct__c.Deal_Registration__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deal_Application_Partner__c</fullName>
        <label>Deal Application Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Application__c</fullName>
        <label>Deal Application</label>
        <picklist>
            <controllingField>End_User_Vertical_Segment__c</controllingField>
            <picklistValues>
                <fullName>All non product revenue sources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset and Facility Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baggage Reconciliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breast Milk Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Collaboration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Scanning and Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couponing Loyalty and Membership Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Docking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dietary and allergens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Store Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document and Records Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Registry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identification Movement and Access Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Management -  Point of Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Management -  Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medication Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchandising and Planograms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile HMI</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Competitor__c</fullName>
        <label>Deal Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>2WIRE - PACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3Com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accu-Sort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerohive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeroscout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFARIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airtech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcatel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alien Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alinco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alvarion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-POS Co.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artevea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avery Dennison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviat Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awarepoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beifeng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing Rongda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing SPRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGRAVIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELKIN</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Fulfillment__c</fullName>
        <description>To maintain DRs raised by partner users</description>
        <label>Deal Fulfillment</label>
        <picklist>
            <picklistValues>
                <fullName>Buy Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy through Distributor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Funding_Vehicle__c</fullName>
        <label>Deal Funding Vehicle</label>
        <picklist>
            <controllingField>End_User_Vertical__c</controllingField>
            <picklistValues>
                <fullName>ARRA - Byrne Competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - Byrne Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - Byrne State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - CBP TaComm &amp; Border Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - Federal Aviation Admin.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - Federal Highway Admin.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - Federal Transit Admin.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - FEMA Port Security Grants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - Health IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - NTIA Broadband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - Rail Security Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - Rural Law Enforcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - RUS Broadband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - School Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - Smart Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - Southern Border</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - State Fiscal Stabilization Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - Tribal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - TSA Aviation Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARRA - VA IT Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COPS Technology Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DARPA Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOD University Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoJ Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Rate Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Gov Operating and Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Gov Project Funding</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Deal_Projected_Close_Date__c</fullName>
        <label>Deal Projected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Registration_Expiration_Date__c</fullName>
        <formula>IF( DR_Expiration_Date__c   &lt;=  NOW()+15, true, false)</formula>
        <label>Deal Registration Expiration Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Registration_ID_18__c</fullName>
        <formula>Id &amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Registration ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Ship_Date__c</fullName>
        <label>Deal Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Wireless_Carrier_Activation__c</fullName>
        <label>Deal Wireless Carrier Activation</label>
        <picklist>
            <picklistValues>
                <fullName>Alltel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bell Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claro Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claro Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comcel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iusacell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Carriers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rogers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint / Nextel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telcel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telefonica Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telefonica Movistar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tim Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon Wireless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivo Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vodafone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demo_Equipment_Provided_if_any__c</fullName>
        <label>Demo Equipment Provided (if any)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Customer_Relationship__c</fullName>
        <label>Describe Customer Relationship</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage_Legacy_Program__c</fullName>
        <label>Discount % - Legacy Program</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distributor_Name__c</fullName>
        <formula>Distributor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Name_if_Tier_2__c</fullName>
        <label>Distributor Name (if Buy via Disti)</label>
        <picklist>
            <controllingField>Deal_Fulfillment__c</controllingField>
            <picklistValues>
                <fullName>ADVANTEC SRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGORA SOLUCOES EM TELECOMUNICACOES LTDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIDC Tecnologia Ltda.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIKOM TECHNOLOGY SRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKAM NETHERLANDS BV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALFADISTRIBUZIONE SRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLOY COMPUTER PRODUCTS PTY LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALPHATELECOM LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Technologies Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDROMEDA DISTRIBUTION CORP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andromeda Distribution Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APTEC BILGISAYAR LIMITED SIRKETI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APTEC TURKEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMADA BILGISAYAR SISTEMLERI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aryan Comunicaciones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSIST INFORMATICA LTDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A TECHNOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVANTIS DISTRIBUTION AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVANTIS DISTRIBUTION AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avnet Europe Comm. VA.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVNET KK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVNET TECHNOLOGY SOLUTIONS GMBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVNET TECHNOLOGY SOLUTIONS SAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVNET TECHNOLOGY SOLUTIONS VIETNAM CO LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERTY DE MEXICO SA DE CV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azlan Logistics Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barex Ab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD ENTERPRISE NETWORKING LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEIJING BAOJIE TECHNOLOGY TRADING CO LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE IP</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor(Required if Buy via Disti)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Registration (Distributor)</relationshipLabel>
        <relationshipName>Deal_Registration4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EVM_Deal_Registration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>It is used as a Place holder for Deal Registration ID of MSI SFDC</description>
        <externalId>true</externalId>
        <label>EVM Deal Registration ID  Legacy</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_User_City__c</fullName>
        <label>End User City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Contact_Email__c</fullName>
        <label>End User Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_User_Contact_Name__c</fullName>
        <label>End User Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Contact_Phone_Number__c</fullName>
        <label>End User Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>End_User_Country__c</fullName>
        <label>End User Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Domain__c</fullName>
        <formula>RIGHT(  End_User_Contact_Email__c  , LEN( End_User_Contact_Email__c) - FIND( &apos;@&apos;, End_User_Contact_Email__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Lookup__c</fullName>
        <label>End User Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Registration (Customer Lookup)</relationshipLabel>
        <relationshipName>Deal_Registration2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_User_Name__c</fullName>
        <label>End User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_StateProvince__c</fullName>
        <label>End User State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>